# issue_creator_kit

./: .gitignore  .gitmodules  .gitmodules.tmp  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  agents.py  analysis_report.md  analysis_report_review.md  goal_definition.md  goal_definition_review.md  implementation_audit.md  prompt.md  pyproject.toml  reconnaissance_report.md  reconnaissance_report_review.md  run.sh  tdd_plan.md  verify_regex.py  verify_regex_v2.py
.build/: Dockerfile  pyproject.toml  repositories.txt  requirements.in  run.sh  setup_gemini_auth.sh  setup_github.sh  setup_venv.sh  update_gemini_context.sh
.build/context/: .env.sample  docker-compose.yml  run.sh
.build/context/.devcontainer/: devcontainer.json
.gemini/: prompt-template.md  settings.json  todo.md
.gemini/.old/: ARCHITECT_SKILLS_CONTEXT.md  ARCHITECT_SKILLS_DESIGN_DOC.md  BACKENDCODER_SKILLS_TDD.md  _GEMINI.md
.gemini/.old/.skills/: TECHNICAL_DESIGNER_SKILLS_SPECS.md
.gemini/AGENTS/: BACKENDCODER.md  FRONTENDCODER.md  PEST_ANALYST.md  PROMPT_ARCHITECTURE_DESIGN.md  SYSTEM_ARCHITECT.md  TECHNICAL_DESIGNER.md  _GEMINI.md
.gemini/AGENTS/.skills/: ARCHITECT_SKILLS_ADR.md  ARCHITECT_SKILLS_CONTEXT.md  ARCHITECT_SKILLS_DESIGN_DOC.md  ARCHITECT_SKILLS_ISSUE_DRAFTING.md  ARCHITECT_SKILLS_ROADMAP.md  BACKENDCODER_SKILLS_REFACTORING.md  BACKENDCODER_SKILLS_REVIEW_RESPONSE.md  BACKENDCODER_SKILLS_TDD.md  BACKENDCODER_SKILLS_TESTING.md  TECHNICAL_DESIGNER_SKILLS_ARCHITECTURE.md  TECHNICAL_DESIGNER_SKILLS_GUIDES.md  TECHNICAL_DESIGNER_SKILLS_SPECS.md
.gemini/AGENTS/jp/: _GEMINI.md
.gemini/AGENTS/old/: BACKENDCODER.md  MARKET_RESEARCHER.md  PRODUCT_MANAGER.md  SYSTEM_ARCHITECT.md  TECHNICAL_DESIGNER.md  UIUX_DESIGNER.md  _GEMINI.md
.gemini/skills/active-reconnaissance/: SKILL.md
.gemini/skills/adr-creation/: SKILL.md
.gemini/skills/adr-decision-support/: SKILL.md
.gemini/skills/adr-domain-modeling/: SKILL.md
.gemini/skills/adr-drafting/: SKILL.md
.gemini/skills/adr-hypothesis/: SKILL.md
.gemini/skills/adr-review/: SKILL.md
.gemini/skills/analyzing-github-reviews/: SKILL.md
.gemini/skills/analyzing-intent/: SKILL.md
.gemini/skills/arch-creation/: SKILL.md
.gemini/skills/arch-drafting/: SKILL.md
.gemini/skills/arch-planning/: SKILL.md
.gemini/skills/arch-planning-review/: SKILL.md
.gemini/skills/arch-quality-design/: SKILL.md
.gemini/skills/arch-refactoring/: SKILL.md
.gemini/skills/arch-structural-design/: SKILL.md
.gemini/skills/architecture-audit/: SKILL.md
.gemini/skills/architecture-drafting/: SKILL.md
.gemini/skills/architecture-hypothesis/: SKILL.md
.gemini/skills/architecture-planning/: SKILL.md
.gemini/skills/architecture-refactoring/: SKILL.md
.gemini/skills/architecture-visualization/: SKILL.md
.gemini/skills/auditing-architecture/: SKILL.md
.gemini/skills/auditing-specs/: SKILL.md
.gemini/skills/auditing-ssot/: SKILL.md
.gemini/skills/auditing-tdd/: SKILL.md
.gemini/skills/bootstrapping-skills/: SKILL.md
.gemini/skills/code-refactoring/: SKILL.md
.gemini/skills/code-refactoring-implementation/: SKILL.md
.gemini/skills/code-review-implementation/: SKILL.md
.gemini/skills/code-testing-implementation/: SKILL.md
.github/: issue-kit-config.json  sync-template-config.yml
.github/scripts/: create_issues.py
.github/workflows/: auto-approve-docs.yml  auto-create-issues.yml  auto-phase-promotion.yml  ci.yml  copilot-instructions.md  gemini-handler.yml  gemini-reviewer.yml  issue-automator.yml  main-pipeline.yml  relay-trigger.yml  sync-repositories.yml  task-automation.yml
docs/: definitions.md  system-context.md
docs/architecture/: arch-behavior-003-autopr.md  arch-behavior-003-creation.md  arch-behavior-approval-flow.md  arch-state-003-task-lifecycle.md  arch-state-007-lifecycle.md  arch-state-doc-lifecycle.md  arch-structure-003-vqueue.md  arch-structure-007-metadata.md  arch-structure-008-scanner.md  arch-structure-issue-kit.md  behavior-activation-sequence.md  behavior-activation.md  behavior-dynamic-dispatch.md  behavior-l1-flow.md  behavior-l1-sync-flow.md  behavior-propagation-model.md  behavior-relay-sequence.md  behavior-validation-flow.md  interface-cli.md  interface-reusable-workflows.md  state-lifecycle.md  structure-cleanup.md  structure-distribution.md  structure-issue-kit.md  structure-metadata.md  structure-relay.md  structure-renderer.md  structure-scanner.md  system-context.md
docs/guides/: coding-guidelines.md  development-setup.md
docs/handovers/: arch-to-spec.md  spec-to-tdd.md
docs/reports/: phase-4-cleanup-report.md
docs/reviews/: analysis-report-pr-265-review.md  analysis-self-review-pr-265.md  arch-audit-adr-007.md  goal-definition-pr-265.md  goal-self-review-pr-265.md  pr-259-analysis.md  pr-265-analysis.md  pr-273-analysis.md  pr-275-analysis.md  reconnaissance-report-pr-265.md
docs/specs/: activation.md  auto-pr-logic.md  distribution.md  infra-interface.md  integration-audit.md  interface-spec.md  metadata-logic-spec.md  renderer.md  test-criteria-spec.md  test-criteria.md  test_strategy.md
docs/spikes/: git-diff-logic.md
docs/template/: arch-behavior.md  arch-data.md  arch-state.md  arch-structure.md  c4-model-template.md  inquiry-report.md  spec-data.md  spec-logic.md  spec-template.md
reqs/_approve/: adr-001-issue-creation-logic.md
reqs/_inbox/: adr-001-issue-creation-logic.md  adr-002-document-approval-flow.md  roadmap-003-document-approval-flow.md  roadmap-adr002-document-approval-flow.md
reqs/_issues/: issue-003-T1-1-T1-2.md  issue-adr002-T1-1.md  issue-adr002-T1-2-T1-3-T1-4.md  issue-adr002-T1-2.md  issue-adr002-T1-3.md  issue-adr002-T1-4.md
reqs/template/: issue-draft.md  migration-roadmap.md
src/issue_creator_kit/: __main__.py  cli.py  utils.py
tests/integration/: test_issue_creation_flow.py
tests/unit/: test_cli.py  test_create_issues.py  test_create_issues.py.bak  test_process_approvals.py  test_process_approvals_all.py  test_usecase_approval.py  test_usecase_workflow.py  test_utils.py  test_workflow.py
(+723 files in other folders)
