# ===================================================================
# 1. ビルドシステムの設定
# ===================================================================
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ===================================================================
# 2. プロジェクトの基本情報
# ===================================================================
[project]
name = "issue_creator_kit"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "Automate GitHub Issue creation and documentation approval workflows."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.scripts]
issue-kit = "issue_creator_kit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "types-requests",
]

# ===================================================================
# 3. ツールごとの設定
# ===================================================================

[tool.setuptools.packages.find]
where = ["src"]
include = ["issue_creator_kit*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "T201"]
ignore = []

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
